src/objects/Lead.object
<CustomObject>
    <businessProcesses>
        <fullName>OnlineDonation</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed - Converted</fullName>
        </values>
        <values>
            <fullName>Closed - Not Converted</fullName>
        </values>
        <values>
            <fullName>Open - Not Contacted</fullName>
            <default>true</default>
        </values>
        <values>
            <fullName>Working - Contacted</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Addressee__c</fullName>
        <description>Editable.  Initially set to Lead.firstname + &apos; &apos; + Lead.Lastname</description>
        <inlineHelpText>Editable.  Initially set to Lead.firstname + &apos; &apos; + Lead.Lastname</inlineHelpText>
        <label>Addressee</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternate_Email__c</fullName>
        <label>Alternate_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Availability__c</fullName>
        <label>Availability</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Weekdays</fullName>
                </value>
                <value>
                    <fullName>Weekends</fullName>
                </value>
                <value>
                    <fullName>Evenings</fullName>
                </value>
                <value>
                    <fullName>Anytime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Communication_Preference__c</fullName>
        <description>How do you prefer we contact you?</description>
        <inlineHelpText>How do you prefer we contact you ?</inlineHelpText>
        <label>Communication Preference</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>By email</fullName>
                </value>
                <value>
                    <fullName>By mail</fullName>
                </value>
                <value>
                    <fullName>By phone</fullName>
                </value>
                <value>
                    <fullName>By Facebook</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Constant1__c</fullName>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Constant1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Antrim</fullName>
                </value>
                <value>
                    <fullName>Benzie</fullName>
                </value>
                <value>
                    <fullName>Charlevoix</fullName>
                </value>
                <value>
                    <fullName>Grand Traverse</fullName>
                </value>
                <value>
                    <fullName>Kalkaska</fullName>
                </value>
                <value>
                    <fullName>Manistee</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CurrentGenerators__c</fullName>
        <label>Current Generator(s)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dear__c</fullName>
        <description>Editable.  Initially set to Lead.Firstname.</description>
        <inlineHelpText>Editable.  Initially set to Lead.Firstname.</inlineHelpText>
        <label>Dear</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Do_Not__c</fullName>
        <label>Do Not</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Don&apos;t call me for contributions</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t mail me solicitation letters</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t email me solicitation messages</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t phone me at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t mail me at all</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t email me at all</fullName>
                </value>
                <value>
                    <fullName>Only send me one solicitation a year.</fullName>
                </value>
                <value>
                    <fullName>Don&apos;t share my name with other groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>How_Heard__c</fullName>
        <description>How did you hear about us?</description>
        <inlineHelpText>How did you hear about us?</inlineHelpText>
        <label>How Heard</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ImportObjectSource__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Import Object Source</label>
        <referenceTo>ImportObject__c</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Jurisdiction__c</fullName>
        <description>Jurisdiction you reside in.</description>
        <inlineHelpText>Jurisdiction you reside in.</inlineHelpText>
        <label>Jurisdiction</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Town of Morse</fullName>
                </value>
                <value>
                    <fullName>Town of Anderson</fullName>
                </value>
                <value>
                    <fullName>Mellen</fullName>
                </value>
                <value>
                    <fullName>Hurley</fullName>
                </value>
                <value>
                    <fullName>City of Ashland</fullName>
                </value>
                <value>
                    <fullName>Odanah</fullName>
                </value>
                <value>
                    <fullName>Iron County (not in Town of Anderson or Hurley)</fullName>
                </value>
                <value>
                    <fullName>Ashland County (not in Town of Morse, Mellen or Odanah)</fullName>
                </value>
                <value>
                    <fullName>Other (for those outside the above mentioned areas)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Email_Overwrite__c</fullName>
        <description>The last date/time that an external process (like Salsa or some other external app) overwrote the primary Email field. We capture this so that you can check on this change and make sure that it&apos;s what you want.</description>
        <inlineHelpText>The last date/time that an external process (like Salsa or some other external app) overwrote the primary Email field. We capture this so that you can check on this change and make sure that it&apos;s what you want.</inlineHelpText>
        <label>Last Email Overwrite</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Legacy_Contact_ID__c</fullName>
        <description>To import from legacy systems</description>
        <inlineHelpText>To import from legacy systems</inlineHelpText>
        <label>Legacy Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Emails__c</fullName>
        <description>A text field to store other emails for this lead.  Maps to Contact.Other_Emails__c</description>
        <inlineHelpText>A text field to store other emails for this lead.  Maps to Contact.Other_Emails__c</inlineHelpText>
        <label>Legacy Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lookup_Key__c</fullName>
        <description>Key for Import Object Lookup Process</description>
        <formula>IF (
AND (
NOT(ISBLANK(FirstName)),
NOT(ISBLANK(LastName)),
NOT(ISBLANK(PostalCode))
),
LOWER(FirstName) &amp; LOWER(LastName) &amp; LOWER(PostalCode),
&quot;&quot;
)</formula>
        <inlineHelpText>Key for Import Object Lookup Process</inlineHelpText>
        <label>Lookup Key</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mailing_Lists__c</fullName>
        <description>What information would you like us to send you?</description>
        <inlineHelpText>What information would you like us to send you?</inlineHelpText>
        <label>Mailing Lists</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Deep Mine updates</fullName>
                </value>
                <value>
                    <fullName>Allegheny Energy Center updates</fullName>
                </value>
                <value>
                    <fullName>Trail news</fullName>
                </value>
                <value>
                    <fullName>Youghiogheny River issues</fullName>
                </value>
                <value>
                    <fullName>Shale Gas issues</fullName>
                </value>
                <value>
                    <fullName>Volunteer opportunities</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Original_LeadSource__c</fullName>
        <description>The first time LeadSource is populated, store it here.  Afterwards, don&apos;t overwrite it.  Only Admins can edit the field.</description>
        <inlineHelpText>The first time LeadSource is populated, store it here.  Afterwards, don&apos;t overwrite it.  Only Admins can edit the field.</inlineHelpText>
        <label>Original_LeadSource</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original</label>
        <referenceTo>Lead</referenceTo>
        <relationshipLabel>Duplicates</relationshipLabel>
        <relationshipName>Duplicates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Email__c</fullName>
        <label>Other_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Over_18__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Over_18</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Personal_Email__c</fullName>
        <label>Personal_Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Preferred_Email__c</fullName>
        <description>Which email should be used for most communications involving this Lead?</description>
        <inlineHelpText>Which email should be used for most communications involving this Lead?</inlineHelpText>
        <label>Preferred_Email</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Personal</fullName>
                </value>
                <value>
                    <fullName>Work</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <label>Primary</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ProductInterest__c</fullName>
        <label>Product Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GC1000 series</fullName>
                </value>
                <value>
                    <fullName>GC5000 series</fullName>
                </value>
                <value>
                    <fullName>GC3000 series</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SICCode__c</fullName>
        <label>SIC Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Request__c</fullName>
        <description>Special requests for more information</description>
        <label>Special Request</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Volunteer_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Please let me know about volunteer activities that match my interests.</description>
        <inlineHelpText>Please let me know about volunteer activities that match my interests.</inlineHelpText>
        <label>Volunteer Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Volunteer_Interests__c</fullName>
        <description>Alter the values by editing the Volunteer_Interests global value set.</description>
        <inlineHelpText>Alter the values by editing the Volunteer_Interests global value set.</inlineHelpText>
        <label>Volunteer Interests</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Volunteer_Interests</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Volunteer_Skills__c</fullName>
        <label>Volunteer_Skills</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fundraising</fullName>
                </value>
                <value>
                    <fullName>Education and outreach</fullName>
                </value>
                <value>
                    <fullName>Data analysis</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Work_Email__c</fullName>
        <label>Work_Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>AllOpenLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.STATUS</field>
            <operation>notContain</operation>
            <value>closed</value>
        </filters>
        <label>All Open Leads</label>
    </listViews>
    <listViews>
        <fullName>MyUnreadLeads</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>LEAD.UNREAD</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Unread Leads</label>
    </listViews>
    <listViews>
        <fullName>TodaysLeads</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LEAD.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s Leads</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom1</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 1</label>
    </listViews>
    <listViews>
        <fullName>ViewCustom2</fullName>
        <columns>FULL_NAME</columns>
        <columns>LEAD.COMPANY</columns>
        <columns>LEAD.STATE</columns>
        <columns>LEAD.EMAIL</columns>
        <columns>LEAD.STATUS</columns>
        <columns>LEAD.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>LEAD.UNREAD</columns>
        <columns>LEAD.LEAD_SOURCE</columns>
        <filterScope>Everything</filterScope>
        <label>View - Custom 2</label>
    </listViews>
    <recordTypes>
        <fullName>OnlineDonation</fullName>
        <active>true</active>
        <businessProcess>OnlineDonation</businessProcess>
        <label>Online Donation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Online_Signup</fullName>
        <active>true</active>
        <businessProcess>OnlineDonation</businessProcess>
        <label>Online Signup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Standard_Lead</fullName>
        <active>true</active>
        <businessProcess>OnlineDonation</businessProcess>
        <label>Standard Lead</label>
    </recordTypes>
    <sharingModel>ReadWriteTransfer</sharingModel>
    <validationRules>
        <fullName>Do_not_overwrite_first_LeadSource</fullName>
        <active>true</active>
        <description>If LeadSource already populated, don&apos;t overwrite it.</description>
        <errorConditionFormula>NOT(ISBLANK(PRIORVALUE(LeadSource))) &amp;&amp; ISCHANGED(LeadSource)</errorConditionFormula>
        <errorMessage>LeadSource already populated</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Test_Errors</fullName>
        <active>true</active>
        <errorConditionFormula>LastName = &apos;TEST52&apos;</errorConditionFormula>
        <errorDisplayField>LastName</errorDisplayField>
        <errorMessage>Failed on LastName</errorMessage>
    </validationRules>
</CustomObject>